<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="256dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/main_menu_remove_wine_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/poppins_light"
        android:onClick="removeButtonClicked"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/mm_button_text_remove"
        android:textAlignment="center"
        android:textColor="@color/White_Text"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/main_menu_add_wine_button"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="@+id/main_menu_add_wine_button"
        app:layout_constraintTop_toBottomOf="@+id/main_menu_add_wine_button" />

    <Button
        android:id="@+id/main_menu_add_wine_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/poppins_light"
        android:onClick="addWineButton"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/mm_button_text_add"
        android:textAlignment="center"
        android:textColor="@color/White_Text"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/main_menu_list_wine_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="@color/colorPrimary"
        android:focusable="auto"
        android:fontFamily="@font/poppins_light"
        android:onClick="showListView"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/mm_button_text_showlist"
        android:textAlignment="center"
        android:textColor="@color/White_Text"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/main_menu_remove_wine_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/main_menu_remove_wine_button"
        app:layout_constraintTop_toBottomOf="@+id/main_menu_remove_wine_button" />

    <ImageView
        android:id="@+id/RemoveWineBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:translationZ="90dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/screen_background_dark_transparent" />

    <EditText
        android:id="@+id/RemoveWineNumberText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:autofillHints="0"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/mm_button_description_remove"
        android:ems="4"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:singleLine="true"
        android:textAlignment="center"
        android:textColor="@color/White_Text"
        android:textSize="24sp"
        android:textStyle="bold"
        android:translationZ="90dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/main_menu_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:translationZ="90dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/RemoveWineNumberText"
        app:layout_constraintStart_toStartOf="@+id/RemoveWineNumberText"
        app:layout_constraintTop_toBottomOf="@+id/RemoveWineNumberText"
        app:spanCount="1"
        tools:itemCount="1"
        tools:listitem="@layout/info_card" />

</androidx.constraintlayout.widget.ConstraintLayout>