<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:layout_gravity="center"
    android:layout_margin="5dp"
    app:cardBackgroundColor="@color/White_Background"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/idBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tint="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/id_panel" />

        <ImageView
            android:id="@+id/numberBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rotation="180"
            android:tint="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/id_panel" />

        <TextView
            android:id="@+id/wine_id_case"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fontFamily="@font/poppins_light"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/w_default_id"
            android:textColor="@color/White_Text"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/idBackground"
            app:layout_constraintEnd_toEndOf="@+id/idBackground"
            app:layout_constraintStart_toStartOf="@+id/idBackground"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/wine_number_case"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fontFamily="@font/poppins_light"
            android:paddingStart="20dp"
            android:paddingEnd="14dp"
            android:text="@string/w_default_number"
            android:textAlignment="center"
            android:textColor="@color/White_Text"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/numberBackground"
            app:layout_constraintStart_toStartOf="@+id/numberBackground"
            app:layout_constraintTop_toTopOf="@+id/numberBackground" />

        <androidx.cardview.widget.CardView
            android:id="@+id/IC_card_name"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="144dp"
            app:layout_constraintBottom_toTopOf="@+id/card_year"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/IC_wine_name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/Wine_Name_Background"
                android:ellipsize="end"
                android:fontFamily="@font/poppins_light"
                android:lines="1"
                android:text="@string/w_default_type"
                android:textAlignment="center"
                android:textColor="@color/White_Text"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_year"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/IC_card_name"
            app:layout_constraintTop_toBottomOf="@+id/IC_card_name">

            <TextView
                android:id="@+id/wine_year_case"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/Wine_Region_Background"
                android:fontFamily="@font/poppins_light"
                android:text="@string/w_default_year"
                android:textAlignment="center"
                android:textColor="@color/White_Text"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:tint="@color/Yellow_Text"
            app:layout_constraintBottom_toBottomOf="@+id/wine_price_case"
            app:layout_constraintStart_toEndOf="@+id/wine_rating_case"
            app:layout_constraintTop_toTopOf="@+id/wine_price_case"
            app:layout_constraintVertical_bias="0.363"
            app:srcCompat="@drawable/star" />

        <TextView
            android:id="@+id/wine_rating_case"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="5"
            android:textAlignment="textStart"
            android:textColor="@color/Yellow_Text"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <TextView
            android:id="@+id/wine_price_case"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:text="@string/w_default_price"
            android:textColor="@color/Red_Text"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/card_year"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/idBackground" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>